force-app/main/default/objects/custom_create216__c/custom_create216__c.object-meta.xml
<CustomObject>
    <label>Custom created object216</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects216</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>