force-app/main/default/objects/custom_create216__c/fields/custom_create_216field529__c.field-meta.xml
<CustomField>
    <fullName>custom_create_216field529__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 216field529</label>
    <type>Checkbox</type>
</CustomField>